# Portal_demo

./: .devenv.flake.nix  .gitignore  .gitmodules  SConstruct  devenv.nix
.specstory/history/: 2025-09-06_10-38Z-mcp.md
docs/: complete_teleport_workflow.md  detailed_modification_plan.md  ecs_system_architecture_and_constraints.md  implementation_steps.md  jolt_debug_features_analysis.md  logical_entity_architecture.md  multi_segment_clipping_algorithm_explanation.md  multi_segment_clipping_guide.md  multi_segment_clipping_visualization.md  physics_event_integration_guide.md  refactor_analysis.md  role_swap_analysis.md
portal_core/: ANALYSIS_REPORT.md  CONSOLE_TESTING_GUIDE.md  裁切文档.md
portal_core/console/: main.cpp  portal_console.cpp  portal_console.h
portal_core/lib/: CMakeLists.txt  README.md
portal_core/lib/cmake/: PortalCoreConfig.cmake.in
portal_core/lib/examples/: main.cpp
portal_core/lib/include/: portal.h  portal_core.h  portal_example.h  portal_interfaces.h  portal_math.h  portal_types.h
portal_core/lib/src/: portal_core.cpp  portal_math.cpp  portal_types.cpp
portal_core/test/: PORTAL_MATH_ANALYSIS.md  debug_intersection  debug_intersection.cpp  portal_math_fix.cpp  test_ab_face.cpp  test_enhanced_debug  test_enhanced_debug.cpp  test_face_scenarios.cpp  test_rendering_clipping.cpp  test_scenarios  test_three_state.cpp
portal_demo_godot/: GameCore.tscn  QUICK_TEST.md  README_physics_test.md  icon.svg.import  main.tscn  new_architecture_demo.tscn  physics_test_scene.tscn  portal_demo.gdextension  portal_demo.gdextension.uid  project.godot
portal_demo_godot/addons/ecs_editor_plugin/: README.md  ecs_dock.gd  ecs_dock.gd.uid  ecs_event_bus.gd  ecs_event_bus.gd.uid  ecs_instance_manager.gd  plugin.cfg  (+5 more)
portal_demo_godot/examples/: ground_physics.tres  sphere_physics.tres
portal_demo_godot/gdextension/: Portal_Demo_GDExtension_详细文档.md  Portal_Demo_编辑器插件系统详细实现文档.md
portal_demo_godot/materials/: box_material.tres  ground_material.tres  sphere_material.tres
src/core/: ARCHITECTURE_ANALYSIS.md  EVENT_SYSTEM_DOCUMENTATION.md  component_safety_manager.h  event_manager.cpp  event_manager.h  event_pool_and_concurrency.h  math_constants.h  math_types.h  physics_world_manager.cpp  physics_world_manager.h  portal_game_world.cpp  portal_game_world.h  system.md  system_base.h  system_manager.h
src/core/portal_core/: ANALYSIS_REPORT.md  CMakeLists.txt  README.md  裁切文档.md
src/core/portal_core/lib/: .gitignore  INCOMPLETE_ITEMS.md  README.md  SConstruct
src/core/portal_core/lib.old/: README.md
src/core/portal_core/lib.old/console/: portal_console.cpp
src/core/portal_core/lib.old/include/: portal_center_of_mass.h  portal_core.h  portal_detection_manager.h  portal_example.h  portal_interfaces.h  portal_math.h  portal_physics_interfaces.h  portal_types.h
src/core/portal_core/lib.old/src/: portal_center_of_mass.cpp  portal_core.cpp  portal_detection_manager.cpp  portal_math.cpp
src/core/portal_core/lib.old/test/: debug_intersection.cpp  test_ab_face_coverage.cpp  test_enhanced_debug.cpp  test_rendering_clipping.cpp  test_seamless_teleport.cpp
src/core/portal_core/lib/cmake/: portal_core.pc.in
src/core/portal_core/lib/examples/: main.cpp
src/core/portal_core/lib/include/: portal_core.h  portal_core_v2.h  portal_interfaces.h  portal_types.h
src/core/portal_core/lib/include/core/: logical_entity_manager.h  portal.h  portal_center_of_mass.h  portal_manager.h  portal_teleport_manager.h
src/core/portal_core/lib/include/interfaces/: portal_event_interfaces.h
src/core/portal_core/lib/include/math/: portal_math.h
src/core/portal_core/lib/include/rendering/: multi_segment_clipping.h
src/core/portal_core/lib/src/: portal_math.cpp
src/core/portal_core/lib/src/core/: logical_entity_manager.cpp  portal.cpp  portal_center_of_mass.cpp  portal_manager.cpp  portal_teleport_manager.cpp
src/core/portal_core/lib/src/math/: portal_math.cpp
src/core/portal_core/lib/src/rendering/: multi_segment_clipping.cpp
src/core/portal_core/lib/tests/: test_chain_teleport.cpp  test_mock_physics_integration.cpp  test_multi_segment_clipping_integrated.cpp
src/core/portal_core/test/: test_ab_face  test_rendering  test_three_state
(+101 files in other folders)
